# macro-insight-engine

./: .gitignore  GEMINI.md  README.md  main.py  positions.yaml  prompts.py  pyproject.toml  sources.yaml  synthesis.py
.github/workflows/: ci.yml  cron.yml
src/macro_insight_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mie/: __init__.py  cli.py  config.py  prompts.py  schemas.py
src/mie/ingest/: downloader.py  feed_monitor.py  pipeline.py
src/mie/processing/: analyzer.py  gemini_client.py  risk_analyzer.py  summarizer.py
tests/: test_analyzer.py  test_config.py  test_downloader.py  test_feed_monitor.py  test_prompts.py  test_risk_analyzer.py  test_schemas.py  test_summarizer.py
tests/fixtures/: sample_feed.xml
