[project]
name = "macro-insight-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.47.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.0",
    "yt-dlp>=2025.10.14",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
